syntax = "proto3";

package bloop;
 
message Project {
    reserved 1;
    repeated Song songs = 2;
    Selections selections = 3;
}

message ProjectInfo {
    string id = 1; 
    string name = 2;
    string version = 3;
    string last_saved = 4;
}

message Selections {
    uint64 song = 1;
    uint64 section = 2;
}

message Song {
    uint64 id = 1;
    string name = 2;
    Tempo tempo = 3;
    repeated Section sections = 4;
    Sample sample = 5;
}

message Tempo {
    double bpm = 1;
}

message Section {
    uint64 id = 1;
    string name = 2;
    double start = 3;
    bool loop = 4;
    bool metronome = 5;
}

message Sample {
    uint64 id = 1;
    string name = 2;
    Tempo tempo = 3;
    int32 sample_rate = 4;
    int64 sample_count = 5;
    int32 channel_count = 6;
}

message PlaybackState {
    PlayingState playing = 1;
    uint64 song_id = 2;
    uint64 section_id = 3;
    uint64 queued_song_id = 4;
    uint64 queued_section_id = 5;
    bool looping = 6;
}

enum PlayingState {
    STOPPED = 0;
    PLAYING = 1;
}

message Request {
    GetRequest get = 1;
    AddRequest add = 2;
    SelectRequest select = 3; 
    RemoveRequest remove = 4;
    UpdateRequest update = 5;
    reserved 6;
    SaveProjectRequest save = 7; 
    LoadProjectRequest load = 8;
    reserved 9;
    BeginUploadRequest begin_upload = 10;
    UploadRequest upload = 11; 
    CompleteUploadRequest complete_upload = 12;
    AddSampleRequest add_sample = 13;
    RemoveSampleRequest remove_sample = 14;
    TransportRequest transport = 15;
    AddSectionRequest add_section = 16;
    reserved 17;
    reserved 18; 
    RemoveProjectRequest remove_project = 19;
    DuplicateProjectRequest duplicate_project = 20; 
    RenameProjectRequest rename_project = 21;
    LoginRequest login = 22;
    LogoutRequest logout = 23;
    ProjectSyncRequest project_sync = 24;
}

message GetRequest {
    Entity entity = 1;
    uint64 id = 2;
}

enum Entity {
    ALL = 0;
    PROJECT = 1;
    PROJECTS = 2;
    SAMPLE = 3;
    SECTION = 4;
    SONG = 5;
    WAVEFORM = 6;
}

message AddRequest {
    Entity entity = 1;
    uint64 id = 2;
}

message SelectRequest {
    Entity entity = 1;
    uint64 id = 2;
}

message RemoveRequest {
    Entity entity = 1;
    uint64 id = 2;
}

message UpdateRequest { 
    Song song = 1;
    Section section = 2;
    Sample sample = 3;
    Project project = 4;
}

message SaveProjectRequest {
    
}

message LoadProjectRequest {
    string project_id = 1;
}

message BeginUploadRequest {
    uint64 upload_id = 1;
    string filename = 2;
    AudioFileFormat format = 3;
}

enum AudioFileFormat {
    WAV = 0;
}

message UploadRequest {
    uint64 upload_id = 1;
    bytes data = 2;
}

message CompleteUploadRequest {
    uint64 upload_id = 1;
}

message AddSampleRequest {
    uint64 song_id = 1;
    uint64 upload_id = 2;
}

message AddSectionRequest {
    uint64 song_id = 1;
    string name = 2;
    double start = 3;
    bool loop = 4;
    bool metronome = 5;
}

message RemoveSampleRequest {
    uint64 song_id = 1;
}

enum TransportMethod {
    PLAY = 0;
    STOP = 1;
    LOOP = 2;
    EXIT_LOOP = 3;
    QUEUE = 4;
}

message TransportRequest {
    TransportMethod method = 1;
    QueueRequest queue = 2;
}

message QueueRequest {
    uint64 song_id = 1;
    uint64 section_id = 2;
}

message Response {
    Project project = 1;
    repeated ProjectInfo projects = 2;
    PlaybackState playback_state = 3;
    WaveformResponse waveform = 4;
    Progress progress = 5;
    UploadAck upload = 6;
    reserved 7;
    reserved 8;
    string error = 9;
    UserStatusResponse user_status = 10;
    ProjectInfo project_info = 11;
    ProjectSyncResponse project_sync = 12;
    repeated ProjectInfo cloud_projects = 13;
} 

message WaveformResponse {
    uint64 sample_id = 1;
    WaveformData waveform_data = 2;
}

message WaveformData {
    int32 sample_rate = 1;
    repeated WaveformGroup peaks = 2;
}

message WaveformGroup {
    WaveformProperties properties = 1;
    repeated float values = 2;
}

message WaveformProperties {
    int32 length = 1;
    WaveformAlgorithm algorithm = 2;
    int32 channel = 3;
}

enum WaveformAlgorithm {
    MIN = 0;
    MAX = 1;
    RMS = 2;
}

message Progress {
    double song_progress = 1;
    double section_progress = 2;
    double section_beat = 3;
}

message UploadAck {
    uint64 upload_id = 1;
}

message RemoveProjectRequest {
    string project_id = 1;
}

message DuplicateProjectRequest {
    string project_id = 1;
}

message RenameProjectRequest {
    string project_id = 1;
    string new_name = 2;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LogoutRequest {}
 
message User {
    string id = 1;
    string email = 2;
    string name = 3;
}

enum UserState {
    USER_STATE_UNDEFINED = 0;
    USER_STATE_SIGNED_OUT = 1;
    USER_STATE_SIGNING_IN = 2;
    USER_STATE_SIGNED_IN = 3;
}

message UserStatusResponse {
    User user = 1;
    UserState state = 2;
}

enum SyncMethod {
    SYNC_METHOD_UNDEFINED = 0;
    SYNC_METHOD_PUSH = 1;
    SYNC_METHOD_PULL = 2;
}

message ProjectSyncRequest {
    SyncMethod method = 1;
    string project_id = 2;
}

enum SyncStatus {
    SYNC_STATUS_UNDEFINED = 0;
    SYNC_STATUS_IN_PROGRESS = 1;
    SYNC_STATUS_COMPLETE = 2;
    SYNC_STATUS_ERROR = 3;
}

message ProjectSyncResponse {
    string project_id = 1;
    SyncStatus status = 2;
}

message Preferences {
    AudioPreferences audio = 1;
    MidiPreferences midi = 2;
    SwitchPreferences switch = 3;
}

message AudioPreferences {
    string output_device = 1;
    uint32 sample_rate = 2;
    uint32 buffer_size = 3;
    uint32 output_channel_count = 4; 
    bool use_jack = 5;
    uint32 main_channel_offset = 6;
    uint32 click_channel_offset = 7;
}

message MidiPreferences {
    string input_device = 1;
}

message SwitchPreferences {
    repeated SwitchMapping mappings = 1;
} 

message SwitchMapping {
    uint32 pin = 1;
    Gesture gesture = 2;
    Action action = 3;
}

enum Gesture {
    GESTURE_UNKNOWN = 0;
    GESTURE_PRESS = 1;
    GESTURE_RELEASE = 2;
    GESTURE_HOLD = 3;
}

enum Action {
    ACTION_UNKNOWN = 0;
    ACTION_PREVIOUS_SONG = 1;
    ACTION_NEXT_SONG = 2;
    ACTION_PREVIOUS_SECTION = 3;
    ACTION_NEXT_SECTION = 4;
    ACTION_QUEUE_SELECTED = 5;
    ACTION_TOGGLE_LOOP = 6;
    ACTION_TOGGLE_PLAY = 7;
}